Developing v0.12

* Do not support Fontforge < 2.0.0 any more

v0.11
2014.01.19

* Compress JS with closure-compiler
* Compress CSS with YUI Compressor
* jQuery removed
* Lots of JS code cleaning
* Enable global key handler by default
* Use WOFF by default
* Always generate TTF before the final output
* Fix CSS for loading-indicator
* Do not set style for global <span>
* Improvements on the SVG output
* New options
 --tmp-file-size-limit
 --tmp-dir

v0.10
2013.10.17

* Lots of code cleaning
* Logo as loading indicator
* Add a logo
* Remove several CSS prefixes
* Background image optimization
* Support output background image in JPEG (--bg-format jpg)
* [Experimental] Support output background image in SVG (--bg-format svg)
* [Experimental] Support Type 3 fonts
* New options
 --bg-format
 --font-format (same as --font-suffix, but without the leading dot)
 --process-type3
* Deprecated options:
 --font-suffix

v0.9
2013.09.16

* Lazy loading of pages
* Show font names in debug messages
* Licensed changed
 - Additional terms for usage in online services
 - Remove GPLv2
* Bug fixes:
 - --optimize-text
 - Always use Unicode encoding for fonts
 - space width
 - disable ligature in Firefox
 - Uninitialized memory for encoding
* New options:
 --embed
 --embed-***
 --override-fstype
* Deprecated/Removed options:
 --single-html
 --remove-unused-glyph

v0.8
2013.05.05

* HTML optimization 
 - reduce number of <span> elements
 - merge lines with different y values 
 - merge lines with different (but proportional) transform matrices
* Custom format for page file name
* Workaround for NBSP
* A default HTML file which load the pages dynamically when split-pages is on
* Support simple clippings
* Bug fixed:
 - missing glyphs in TTF fonts
 - unexpected vertical shifts
 - whitespace lost in IE
* New UI style 
* New options:
 --optimize-text : HTML optimization, see above
 --fallback : the most accurate way, but costy (larger file sizes)