@@ -3,7 +3,7 @@ compiler: gcc
 before_install:
   - sudo add-apt-repository ppa:coolwanglu/pdf2htmlex --yes
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libpoppler-dev libspiro-dev libcairo-dev libfreetype6-dev
+  - sudo apt-get install -qq libpoppler-dev libspiro-dev libcairo-dev libfreetype6-dev libltdl-dev
 install:
   - export LIBRARY_PATH=/usr/local/lib
   - export LD_LIBRARY_PATH=/usr/local/lib
