@@ -1,0 +1,3 @@
+For instructions of building the source code, visit:
+https://github.com/coolwanglu/pdf2htmlEX/wiki/Building
+
