@@ -135,6 +135,10 @@ Whether to process non-text objects (as images)
 Whether to show outline in the generated HTML
 
 .TP
+.B --process-annotation <0|1> (Default: 0)
+Whether to show annotation in the generated HTML
+
+.TP
 .B --printing <0|1> (Default: 1)
 Enable printing support. Disabling this option may reduce the size of CSS.
 
