@@ -72,17 +72,18 @@ void SplashBackgroundRenderer::init(PDFDoc * doc)
     startDoc(doc);
 }
 
-static GBool annot_cb(Annot *, void *) {
-    return false;
+static GBool annot_cb(Annot *, void * pflag) {
+    return (*((bool*)pflag)) ? gTrue : gFalse;
 };
 
 void SplashBackgroundRenderer::render_page(PDFDoc * doc, int pageno)
 {
+    bool process_annotation = param.process_annotation;
     doc->displayPage(this, pageno, param.h_dpi, param.v_dpi,
             0, 
             (!(param.use_cropbox)),
             false, false,
-            nullptr, nullptr, &annot_cb, nullptr);
+            nullptr, nullptr, &annot_cb, &process_annotation);
 }
 
 void SplashBackgroundRenderer::embed_image(int pageno)
